# home_recruiters

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  docs.http  index.html  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
core/: main.py  settings.py  templates.py  utils.py
docs/: index.md
jobs/: interfaces.py  models.py  schema.py  services.py  utils.py  views.py
search/: search_index.json
users/: depends.py  interfaces.py  models.py  schema.py  services.py  utils.py  validators.py  views.py
